--- a/src/templates/partials/info-tags.hbs
+++ b/src/templates/partials/info-tags.hbs
@@ -1,8 +1,26 @@
 <div class="info-tags">
-	<ul>
-		<li><a href="#">Apply</a></li>
-		<li><a href="#">Visit</a></li>
-		<li><a href="#">Get info</a></li>
-		<li><a href="#">Give</a></li>
+	<ul class="info-tags__list">
+		<li class="info-tags__link" id="panel_1"><a href="#">Apply</a></li>
+		<li class="info-tags__link" id="panel_2"><a href="#">Visit</a></li>
+		<li class="info-tags__link" id="panel_3"><a href="#">Get info</a></li>
+		<li class="info-tags__link" id="panel_4"><a href="#">Give</a></li>
 	</ul>
+	<div class="info-tags__content">
+		<div class="info-tags__content-panel" id="panel_1">
+			<h3>Apply</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+		</div>
+		<div class="info-tags__content-panel" id="panel_2">
+			<h3>Visit</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+		</div>
+		<div class="info-tags__content-panel" id="panel_3">
+			<h3>Get info</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+		</div>
+		<div class="info-tags__content-panel" id="panel_4">
+			<h3>Give</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+		</div>
+	</div>
 </div>
