adding moving picture centered version

--- a/src/css/base/space.css
+++ b/src/css/base/space.css
@@ -18,6 +18,9 @@ a,t,r,b,l,h,v = all,top,right,bottom,left,horizontal,vertical
 .pt4, .pv4, .pa4 {padding-top: 4em !important; }
 .pt5, .pv5, .pa5 {padding-top: 5em !important; }
 .pt6, .pv6, .pa6 {padding-top: 6em !important; }
+.pt10, .pv10, .pa10 {padding-top: 10em !important; }
+.pt15, .pv15, .pa15 {padding-top: 15em !important; }
+.pt20, .pv20, .pa20 {padding-top: 20em !important; }
 .pr0, .ph0, .pa0 {padding-right: 0 !important; }
 .pr1, .ph1, .pa1 {padding-right: 1em !important; }
 .pr2, .ph2, .pa2 {padding-right: 2em !important; }
@@ -32,6 +35,9 @@ a,t,r,b,l,h,v = all,top,right,bottom,left,horizontal,vertical
 .pb4, .pv4, .pa4 {padding-bottom: 4em !important; }
 .pb5, .pv5, .pa5 {padding-bottom: 5em !important; }
 .pb6, .pv6, .pa6 {padding-bottom: 6em !important; }
+.pb10, .pv10, .pa10 {padding-bottom: 10em !important; }
+.pb15, .pv15, .pa15 {padding-bottom: 15em !important; }
+.pb20, .pv20, .pa20 {padding-bottom: 20em !important; }
 .pl0, .ph0, .pa0 {padding-left: 0 !important; }
 .pl1, .ph1, .pa1 {padding-left: 1em !important; }
 .pl2, .ph2, .pa2 {padding-left: 2em !important; }
