--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -138,3 +138,44 @@
 		margin-top: .5em;
 	}
 }
+
+/* centered version */
+
+.moving-picture__overlay--center {
+/* 	position: absolute;
+	left: 0;
+	bottom: 0; */
+	color: #fff;
+	font-family: $gotham;
+	z-index: 20;
+	padding: 1em 2.5em;
+	text-align: center;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%; 
+	transform: translate(-50%, -50%);
+
+	@mixin respond-min $medium {
+		width: 75%;
+		padding: 2% 8%;
+	}
+}
+
+.moving-picture__overlay--center::before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(24, 25, 34, 0.5);
+}
