--- a/src/templates/partials/info-tags.hbs
+++ b/src/templates/partials/info-tags.hbs
@@ -1,26 +1,37 @@
 <div class="info-tags">
 	<ul class="info-tags__list">
-		<li class="info-tags__link" id="panel_1"><a href="#">Apply</a></li>
-		<li class="info-tags__link" id="panel_2"><a href="#">Visit</a></li>
-		<li class="info-tags__link" id="panel_3"><a href="#">Get info</a></li>
-		<li class="info-tags__link" id="panel_4"><a href="#">Give</a></li>
+		<li class="info-tags__link"><a id="#panel_1">Apply</a></li>
+		<li class="info-tags__link"><a id="#panel_2">Visit</a></li>
+		<li class="info-tags__link"><a id="#panel_3">Get info</a></li>
+		<li class="info-tags__link"><a id="#panel_4">Give</a></li>
 	</ul>
 	<div class="info-tags__content">
 		<div class="info-tags__content-panel" id="panel_1">
 			<h3>Apply</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+			<p>We try to make the application process as easy as possible. The whole process can take you less than 30 minutes!</p>
+			<p><a href="https://www.bethel.edu/admissions/apply/">Apply Now</a></p>
 		</div>
 		<div class="info-tags__content-panel" id="panel_2">
 			<h3>Visit</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+			<p>Our campuses are amazing places and we'd love to show them to you. Schedule your own visit or attend one of our campus visit events. </p>
+			<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Schedule a Visit</a></p>
+			<p><a class="" href="https://www.bethel.edu/giving/">Upcoming Events</a></p>
 		</div>
 		<div class="info-tags__content-panel" id="panel_3">
 			<h3>Get info</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+			<ul>
+				<li><a href="https://www.bethel.edu/undergrad/admissions/contact/request-information/">Undergrad</a></li>
+				<li><a href="https://www.bethel.edu/adult-undergrad/admissions/contact/request-information/">Adult Undergrad</a></li>
+				<li><a href="https://www.bethel.edu/graduate/admissions/contact/request-information/">Graduate</a></li>
+				<li><a href="https://www.bethel.edu/seminary/admissions/contact/request-information/">Seminary</a></li>
+			</ul>
 		</div>
 		<div class="info-tags__content-panel" id="panel_4">
 			<h3>Give</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
+			<p>Join the thousands of friends, alumni, employees, and investors who support Bethel's mission, sending out adventurous Christ-followers to serve their communities and workplaces.</p>
+			<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Give Now</a></p>
+			<p><a class="" href="https://www.bethel.edu/giving/">Learn More</a></p>
 		</div>
 	</div>
 </div>
