--- a/src/templates/partials/info-tags.hbs
+++ b/src/templates/partials/info-tags.hbs
@@ -13,19 +13,18 @@
 		</div>
 		<div class="info-tags__content-panel" id="panel_2">
 			<h3>Visit</h3>
-			<p>Our campuses are amazing places and we'd love to show them to you. Schedule your own visit or attend one of our campus visit events. </p>
+			<p>Our campuses are amazing places and we'd love to show them to you. Schedule your own visit or attend one of our campus visit events.</p>
 			<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Schedule a Visit</a></p>
 			<p><a class="" href="https://www.bethel.edu/giving/">Upcoming Events</a></p>
 		</div>
 		<div class="info-tags__content-panel" id="panel_3">
 			<h3>Get info</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste rem cupiditate consectetur repellendus et sed quas pariatur fugit sapiente aliquam.</p>
-			<ul>
-				<li><a href="https://www.bethel.edu/undergrad/admissions/contact/request-information/">Undergrad</a></li>
-				<li><a href="https://www.bethel.edu/adult-undergrad/admissions/contact/request-information/">Adult Undergrad</a></li>
-				<li><a href="https://www.bethel.edu/graduate/admissions/contact/request-information/">Graduate</a></li>
-				<li><a href="https://www.bethel.edu/seminary/admissions/contact/request-information/">Seminary</a></li>
-			</ul>
+			<p>Want to learn more about what Bethel has to offer? Contact our admissions department, and we'll get you the information you need.</p>
+			<p><a href="https://www.bethel.edu/undergrad/admissions/contact/request-information/">Undergrad</a></p>
+			<p><a href="https://www.bethel.edu/adult-undergrad/admissions/contact/request-information/">Adult Undergrad</a></p>
+			<p><a href="https://www.bethel.edu/graduate/admissions/contact/request-information/">Graduate</a></p>
+			<p><a href="https://www.bethel.edu/seminary/admissions/contact/request-information/">Seminary</a></p>
+
 		</div>
 		<div class="info-tags__content-panel" id="panel_4">
 			<h3>Give</h3>
