--- a/src/css/post.css
+++ b/src/css/post.css
@@ -44,7 +44,7 @@
 @import "modules/routing.css";
 @import "modules/section--home.css";
 @import "modules/social-media.css";
-@import "modules/info-tags.css";
+@import "modules/action-nav.css";
 
 @import "enhance/carousel.css";
 
