resolving open/disappear issue

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -4,7 +4,7 @@ layout: default
 pageTitle: Test title
 ---
 
-{{> info-tags }}
+{{> action-nav }}
 
 <div class="grid-section mt0" >
     {{> moving-picture }}
