--- a/src/templates/partials/action-nav.hbs
+++ b/src/templates/partials/action-nav.hbs
@@ -3,7 +3,7 @@
 		<li class="action-nav__link"><a id="#panel_1">Apply</a></li>
 		<li class="action-nav__link"><a id="#panel_2">Visit</a></li>
 		<li class="action-nav__link"><a id="#panel_3">Get info</a></li>
-		<li class="action-nav__link"><a id="#panel_4">Give</a></li>
+		{{!-- <li class="action-nav__link"><a id="#panel_4">Give</a></li> --}}
 	</ul>
 	<div class="action-nav__content">
 		<div class="action-nav__content-panel" id="panel_1">
@@ -26,11 +26,11 @@
 			<p><a href="https://www.bethel.edu/seminary/admissions/contact/request-information/">Seminary</a></p>
 
 		</div>
-		<div class="action-nav__content-panel" id="panel_4">
+{{!-- 		<div class="action-nav__content-panel" id="panel_4">
 			<h3>Give</h3>
 			<p>Join the thousands of friends, alumni, employees, and investors who support Bethel's mission, sending out adventurous Christ-followers to serve their communities and workplaces.</p>
 			<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Give Now</a></p>
 			<p><a class="" href="https://www.bethel.edu/giving/">Learn More</a></p>
-		</div>
+		</div> --}}
 	</div>
 </div>
