--- a/src/templates/partials/action-nav.hbs
+++ b/src/templates/partials/action-nav.hbs
@@ -1,36 +1,37 @@
 <div class="action-nav">
-	<ul class="action-nav__list">
+    <ul class="action-nav__list">
 		<li class="action-nav__link"><a id="#panel_1">Apply</a></li>
 		<li class="action-nav__link"><a id="#panel_2">Visit</a></li>
-		<li class="action-nav__link"><a id="#panel_3">Get info</a></li>
-		{{!-- <li class="action-nav__link"><a id="#panel_4">Give</a></li> --}}
+		<li class="action-nav__link"><a id="#panel_3">Inquire</a></li>
+		{{!-- ## <li class="action-nav__link"><a id="#panel_4">Give</a></li> --}}
 	</ul>
 	<div class="action-nav__content">
 		<div class="action-nav__content-panel" id="panel_1">
 			<h3>Apply</h3>
-			<p>We try to make the application process as easy as possible. The whole process can take you less than 30 minutes!</p>
+			<p>Ready to accomplish incredible things? Get started today—the whole process can take you less than 30 minutes!</p>
 			<p><a href="https://www.bethel.edu/admissions/apply/">Apply Now</a></p>
 		</div>
 		<div class="action-nav__content-panel" id="panel_2">
 			<h3>Visit</h3>
-			<p>Our campuses are amazing places and we'd love to show them to you. Schedule your own visit or attend one of our campus visit events.</p>
-			<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Schedule a Visit</a></p>
-			<p><a class="" href="https://www.bethel.edu/giving/">Upcoming Events</a></p>
+			<p>Why Bethel? See for yourself. Join us for a campus visit or sign up for an online info session and get to know our exciting community.</p>
+			<p><a class="" href="https://www.bethel.edu/undergrad/admissions/visit/">Undergrad Visits</a></p>
+			<p><a class="" href="https://www.bethel.edu/adult-undergrad/admissions/visit/">Adult Undergrad Visits</a></p>
+            <p><a class="" href="https://www.bethel.edu/graduate/admissions/visit/">Graduate Visits</a></p>
+            <p><a class="" href="https://www.bethel.edu/seminary/admissions/visit/">Seminary Visits</a></p>
 		</div>
 		<div class="action-nav__content-panel" id="panel_3">
-			<h3>Get info</h3>
-			<p>Want to learn more about what Bethel has to offer? Contact our admissions department, and we'll get you the information you need.</p>
+			<h3>Inquire</h3>
+			<p>Want to learn more about what Bethel has to offer? We&#39;re happy to get you the information you need.</p>
 			<p><a href="https://www.bethel.edu/undergrad/admissions/contact/request-information/">Undergrad</a></p>
 			<p><a href="https://www.bethel.edu/adult-undergrad/admissions/contact/request-information/">Adult Undergrad</a></p>
 			<p><a href="https://www.bethel.edu/graduate/admissions/contact/request-information/">Graduate</a></p>
 			<p><a href="https://www.bethel.edu/seminary/admissions/contact/request-information/">Seminary</a></p>
-
 		</div>
-{{!-- 		<div class="action-nav__content-panel" id="panel_4">
-			<h3>Give</h3>
-			<p>Join the thousands of friends, alumni, employees, and investors who support Bethel's mission, sending out adventurous Christ-followers to serve their communities and workplaces.</p>
-			<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Give Now</a></p>
-			<p><a class="" href="https://www.bethel.edu/giving/">Learn More</a></p>
-		</div> --}}
+{{!-- 		## <div class="action-nav__content-panel" id="panel_4">
+		## 	<h3>Give</h3>
+		## 	<p>Join the thousands of friends, alumni, employees, and investors who support Bethel's mission, sending out adventurous Christ-followers to serve their communities and workplaces.</p>
+		## 	<p><a class="" href="https://www.bethel.edu/giving/donate/give-now">Give Now</a></p>
+		## 	<p><a class="" href="https://www.bethel.edu/giving/">Learn More</a></p>
+		## </div> --}}
 	</div>
 </div>
