tweaking moving picture no gradient and adding vimeo svg icon

--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -21,6 +21,10 @@
       }
  }
 
+ .moving-picture.no-gradient:before {
+ 	background-image: none;
+ }
+
 .moving-picture__media {
 	height: 415px;
 	/* display: flex;*/
