--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -3,7 +3,7 @@
 {{#each movingPic}}
     {{#if show}}
 
-    <div class="moving-picture">
+    <div class="moving-picture no-gradient">
         <div class="moving-picture__media">
             <div id="vid-wrap"></div>
             <script type="text/javascript">
