--- a/src/css/global/header.css
+++ b/src/css/global/header.css
@@ -1,5 +1,5 @@
 .global__header {
-    background: color(#0f2c52 lightness(23%));
+    background: #123563;
     position: relative;
     padding: 0;
     width: 100%;
