--- a/src/css/base/utils.css
+++ b/src/css/base/utils.css
@@ -11,39 +11,17 @@
 	}
 }
 
-.u-w100 {
-	width: 100% !important;
-}
-
-.bkg--white {
-	background-color: #fff;
-}
-
-.bkg--light-gray {
-	background-color: #eee;
-}
-
-.bkg--blue {
-	background-color: $bethel--blue;
-}
-
-.bkg--navy {
-	background-color: $bethel--navy;
-}
-
-.bkg--yellow {
-	background-color: $bethel--yellow;
-}
-
-.bkg--gradient-blue-yellow {
-	background: linear-gradient(-150deg, $bethel--blue, 70%, $bethel--yellow);
-}
+.u-w100 { width: 100% !important; }
+.bkg--white { background-color: #fff; }
+.bkg--light-gray { background-color: #eee; }
+.bkg--blue { background-color: $bethel--blue; }
+.bkg--navy { background-color: $bethel--navy; }
+.bkg--yellow { background-color: $bethel--yellow; }
+.bkg--gradient-blue-yellow { background: linear-gradient(-150deg, $bethel--blue, 70%, $bethel--yellow); }
 
 $bkg--gradient-blue-yellow: linear-gradient(-150deg, $bethel--blue, 70%, $bethel--yellow);
 
-.bkg--gradient-navy-blue {
-	background: linear-gradient(-150deg, $bethel--navy, $bethel--blue);
-}
+.bkg--gradient-navy-blue { background: linear-gradient(-150deg, $bethel--navy, $bethel--blue); }
 
 .vh100 {
 	@mixin respond-min $medium {
@@ -56,7 +34,6 @@ $bkg--gradient-blue-yellow: linear-gradient(-150deg, $bethel--blue, 70%, $bethel
 		height: 110vh;
 	}
 }
-
 
 .va-container {
 	display: table;
@@ -77,3 +54,7 @@ $bkg--gradient-blue-yellow: linear-gradient(-150deg, $bethel--blue, 70%, $bethel
 .display-table {
 	display: table;
 }
+
+.u-z0 {z-index: 0}
+.u-z100 {z-index: 100;}
+.u-z200 {z-index: 200;}
