--- a/src/css/enhance/quotes.css
+++ b/src/css/enhance/quotes.css
@@ -69,8 +69,7 @@
 
     @mixin respond-min $x-large{
         flex-basis: 8em;
-        /* float: left;*/
-        /* flex-shrink: 0;*/
+        flex-shrink: 0;
         padding-right: 2em;
         margin-bottom: 0;
     }
