--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,42 +1,60 @@
-<div class="js-rotate-order-carousel flickity">
+<div class="lory">
+<div class="slider js_percentage percentage">
+    <div class="frame js_frame">
+        <ul class="slides js_slides">
+            {{#each movingPic}} 
+                {{#if show}}
+                <li class="js_slide">
+                    <div class="xmoving-picture">
+                        <div class="xmoving-picture__media">
+                            <div id="xvid-wrap"></div>
+                            {{!-- <script type="text/javascript">
+                                    // if (window.matchMedia("(min-width: 1100px)").matches) {
+                                    //     var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
+                                    //     vidStr += '<source src="https://www.bethel.edu/cdn/videos/pathways-in-healthcare.mp4" type="video/mp4" />';
+                                    //     vidStr += '<img src="https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/welcome-week-2016-2x1.jpg" />';
+                                    //     vidStr += '</video>';
+                                    //     document.getElementById('vid-wrap').innerHTML = vidStr;
+                                    //     document.getElementById('vid').play();
+                                    // }
+                            </script> --}}
+                            <picture>
+                                <!--[if IE 9]><video style="display: none"><![endif]-->
+                                <source srcset="{{ this.bigImg }}" media="(min-width: 830px)" />
+                                <source srcset="{{ this.mobileImg }}" />
+                                <!--[if IE 9]></video><![endif]-->
+                                <img {{!-- class="lazyload" --}} alt="image with artdirection" data-sizes="auto" />
+                            </picture>
+                        </div>
 
-{{#each movingPic}}
-    {{#if show}}
+                        {{!-- <div class="moving-picture__overlay  js-animateSequence">
+                            <h2 class="moving-picture__overlay__headline seq">{{ this.headline }}</h2>
+                            <p class="moving-picture__overlay__teaser seq">{{ this.teaser }}</p>
+                            <p class="seq">
+                                <a class="moving-picture__overlay__button " href="admissions/index.php">{{ this.button }}</a>
+                            </p>
+                        </div> --}}
+                    </div>
+                </li>
 
-    <div class="moving-picture no-gradient">
-        <div class="moving-picture__media">
-            <div id="vid-wrap"></div>
-            <script type="text/javascript">
-                // if (window.matchMedia("(min-width: 1100px)").matches) {
-                //     var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
-                //     vidStr += '<source src="https://www.bethel.edu/cdn/videos/pathways-in-healthcare.mp4" type="video/mp4" />';
-                //     vidStr += '<img src="https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/welcome-week-2016-2x1.jpg" />';
-                //     vidStr += '</video>';
-                //     document.getElementById('vid-wrap').innerHTML = vidStr;
-                //     document.getElementById('vid').play();
-                // }
-            </script>
-            <picture>
-                <!--[if IE 9]><video style="display: none"><![endif]-->
-                <source srcset="{{ this.bigImg }}" media="(min-width: 830px)" />
-                <source srcset="{{ this.mobileImg }}" />
-                <!--[if IE 9]></video><![endif]-->
-                <img
-                        {{!-- class="lazyload" --}}
-                        alt="image with artdirection"
-                        data-sizes="auto"
-                />
-            </picture>
-        </div>
-
-        <div class="moving-picture__overlay  js-animateSequence">
-            <h2 class="moving-picture__overlay__headline seq">{{  this.headline }}</h2>
-            <p class="moving-picture__overlay__teaser seq">{{  this.teaser }}</p> 
-            <p class="seq"><a class="moving-picture__overlay__button " href="admissions/index.php">{{ this.button }}</a></p>
-        </div>
+                {{/if}} 
+            {{/each}}
+        </ul>
+        <span class="js_prev prev">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5">
+                <g>
+                    <path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z" />
+                </g>
+            </svg>
+        </span>
+        <span class="js_next next">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5">
+                <g>
+                    <path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"
+                    />
+                </g>
+            </svg>
+        </span>
     </div>
-
-    {{/if}}
-{{/each}}
-
+</div>
 </div>
