--- a/src/templates/partials/quotes.hbs
+++ b/src/templates/partials/quotes.hbs
@@ -1,41 +1,58 @@
-<div class="flickity  carousel--employee">
+<div class="lory  xcarousel--employee">
+    <div class="slider js-percentage percentage">
+        <div class="frame js_frame">
+            <ul class="slides js_slides">
 
-    <div class="flickity--cell  lazyload">
-        <div class="quote">
-            <div class="quote__avatar">
-                <img  class="lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
-            </div>
-            <div class="quote__text">
-                <p>Bethel really prepared me...having a liberal arts education was beneficial because it made me well rounded.[Businesses] look for people with all sorts of different backgrounds and leadership experience. Bethel encourages people to get involved.</p>
-                <cite class="quote__source">–Nicole (Nettleton) Willenbring</cite>
-            </div>
+                <li class="js_slide">
+                    <div class="quote">
+                        <div class="quote__avatar">
+                            <img src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg">
+                        </div>
+                        <div class="quote__text">
+                            <p>Bethel really prepared me...having a liberal arts education was beneficial because it made me
+                                well rounded.[Businesses] look for people with all sorts of different backgrounds and leadership
+                                experience. Bethel encourages people to get involved.</p>
+                            <cite class="quote__source">–Nicole (Nettleton) Willenbring</cite>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="js_slide">
+                    <div class="quote">
+                        <div class="quote__avatar">
+                            <img class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg"
+                                title="">
+                        </div>
+
+                        <div class="quote__text">
+                            <p>While interviewing with a Bethel alum for a position at UnitedHealth Group, the interviewer asked
+                                me to consider joining the International Audit department instead of the position for which
+                                I had applied. At the time, I had next to no idea what working in International Audit entailed!
+                                That same Bethel alum also connected me to the Healthcare Reform opportunity three years
+                                later. So, it’s safe to say that my career path was undeniably influenced by Bethel and this
+                                wonderful alum who decided to take a chance on me – not just once, but twice.</p>
+                            <cite class="quote__source">–Chin-Chin Lin</cite>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="js_slide">                    <div class="xquote">
+                        <div class="quote__avatar">
+                            <img class="lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_vennerstrom-andrew.jpg"
+                                 title="">
+                        </div>
+
+                        <div class="quote__text">
+                            <p>As a Christian in the workplace, I am able to connect with people on a different level. I know
+                                my reason for being there and do my part to create an encouraging work environment for my
+                                coworkers. I hope my attitude is a positive example observable through the way I make decisions,
+                                treat my clients, and strive for excellence every day.</p>
+                            <cite class="quote__source">–Andrew Vennerstrom </cite>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
         </div>
     </div>
-
-    <div class="flickity--cell  lazyload">
-        <div class="quote">
-            <div class="quote__avatar">
-                <img  class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg" style="opacity: 1;" title="">
-            </div>
-
-            <div class="quote__text">
-                <p>While interviewing with a Bethel alum for a position at UnitedHealth Group, the interviewer asked me to consider joining the International Audit department instead of the position for which I had applied. At the time, I had next to no idea what working in International Audit entailed! That same Bethel alum also connected me to the Healthcare Reform opportunity three years later. So, it’s safe to say that my career path was undeniably influenced by Bethel and this wonderful alum who decided to take a chance on me – not just once, but twice.</p>
-                <cite class="quote__source">–Chin-Chin Lin</cite>
-            </div>
-        </div>
-    </div>
-
-    <div class="flickity--cell  lazyload">
-        <div class="quote">
-            <div class="quote__avatar">
-                <img  class="lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_vennerstrom-andrew.jpg" style="opacity: 1;" title="">
-            </div>
-
-            <div class="quote__text">
-                <p>As a Christian in the workplace, I am able to connect with people on a different level. I know my reason for being there and do my part to create an encouraging work environment for my coworkers. I hope my attitude is a positive example observable through the way I make decisions, treat my clients, and strive for excellence every day.</p>
-                <cite class="quote__source">–Andrew Vennerstrom </cite>
-            </div>
-        </div>
-    </div>
-
 </div>
