--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -1,8 +1,9 @@
 .moving-picture {
 	position: relative;
-	margin-bottom: 8.9em;
 	max-width: 125em;
 	display: flex;
+	justify-content: center;
+	align-items: center;
 
 	@mixin respond-min 830px {
 		 max-height: 75vh;
@@ -86,24 +87,24 @@
 	/* left: 2em; */
 	/* bottom: 0; */
 
-	// color: #555;
-	font-family: $gotham;
+	/* // color: #555; */
+	/* font-family: $gotham; */
 	/* z-index: 1; */
-	// padding: 2em;
+	/* // padding: 2em;
 	// text-align: center;
-	// background: rgba(100,100,100,.4);
+	// background: rgba(100,100,100,.4); */
 	/* overflow: visible; */
 	/* display: inline; */
 
 	@mixin respond-min $medium {
-		// position: absolute;
-		left: 15%;
+		/* // position: absolute; */
+		/* left: 15%; */
 		/* bottom: -200px; */
 		
-		width: 40%;
-		// padding: 3em;
+		width: 60%;
+		/* // padding: 3em; */
 		/* box-shadow: 1px 5px 20px #777; */
-		align-self: center;
+		/* align-self: center; */
 		text-shadow: 0px 1px 1px #333;
 	}
 
@@ -126,7 +127,7 @@
 	}
 
 	@mixin respond-min $x-large{
-		font-size: 6rem;
+		font-size: 5rem;
 	}
 }
 
@@ -141,7 +142,7 @@
 	}
 }
 
-.moving-picture__overlay__button {
+/* .moving-picture__overlay__button {
 	background-color: $bethel--blue;
 	padding: .75em 1em;
 	border-radius: .3em;
@@ -156,7 +157,7 @@
 	@mixin respond-min $medium {
 		margin-top: .5em;
 	}
-}
+} */
 
 /* centered version */
 
